# conways-game-of-life

./: CMakeLists.txt
includes/: cell.h  grid.h  life.h
src/: cell.cpp  grid.cpp  life.cpp  life.h  main.cpp
